--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+#Simple binary tree
+
 This is an implementation of a simple binary tree with the following methods: 
 
 - add(self, value, node): adds a node to the tree
